--- a/UsingAmazonSQS.Queue.Test/App.config
+++ b/UsingAmazonSQS.Queue.Test/App.config
@@ -5,8 +5,8 @@
     <add key="SQSServiceUrl" value="https://sqs.sa-east-1.amazonaws.com" />
     <!--Example: https://sqs.sa-east-1.amazonaws.com/7837836/ -->
     <add key="SQSServiceQueeUrl" value="https://sqs.sa-east-1.amazonaws.com/701921310896/" />
-    <add key="AwsAccessId" value="AKIAJRQM2ACKUFXLPFQQ"/>
-    <add key="AwsSecretAccessKey" value="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"/>
+    <add key="AwsAccessId" value=""/>
+    <add key="AwsSecretAccessKey" value=""/>
     <add key="QueueName" value="MyQueue"/>
   </appSettings>
 </configuration>
